Bug 208488 - REGRESSION (257739) [ Mac wk2 Release ] multiple tests crashing in WebCore::postUserInfoForChanges
Summary: REGRESSION (257739) [ Mac wk2 Release ] multiple tests crashing in WebCore::p...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: WebKit Nightly Build
Hardware: Mac macOS 10.15
: P2 Normal
Assignee: chris fleizach
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-03-02 17:12 PST by Jason Lawrence
Modified: 2020-03-02 20:57 PST (History)
12 users (show)

See Also:


Attachments
input-type-change-crash-log (82.03 KB, text/plain)
2020-03-02 17:12 PST, Jason Lawrence
no flags Details
form-validation-reportValidity-crash-log (67.71 KB, text/plain)
2020-03-02 17:13 PST, Jason Lawrence
no flags Details
input-type-attribute-crash-log (76.77 KB, text/plain)
2020-03-02 17:13 PST, Jason Lawrence
no flags Details
hide-auto-fill-strong-password-button-when-value-changes-crash-log (76.64 KB, text/plain)
2020-03-02 17:14 PST, Jason Lawrence
no flags Details
textinput-not-fired-on-enter-in-input-crash-log (77.25 KB, text/plain)
2020-03-02 17:14 PST, Jason Lawrence
no flags Details
form-validation-validate-crash-log (68.88 KB, text/plain)
2020-03-02 17:14 PST, Jason Lawrence
no flags Details
patch (2.12 KB, patch)
2020-03-02 17:21 PST, chris fleizach
no flags Details | Formatted Diff | Diff
patch (2.11 KB, patch)
2020-03-02 17:22 PST, chris fleizach
no flags Details | Formatted Diff | Diff
Patch (2.22 KB, patch)
2020-03-02 19:43 PST, Andres Gonzalez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jason Lawrence 2020-03-02 17:12:26 PST
Created attachment 392221 [details]
input-type-change-crash-log

fast/forms/input-type-change.html
imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-reportValidity.html
fast/dom/HTMLInputElement/input-type-attribute.html
fast/forms/auto-fill-button/hide-auto-fill-strong-password-button-when-value-changes.html
fast/forms/textinput-not-fired-on-enter-in-input.html
imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validate.html


Description:
Multiple tests crashing on Mac wk2 Release

History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Fdom%2FHTMLInputElement%2Finput-type-attribute.html&test=fast%2Fforms%2Fauto-fill-button%2Fhide-auto-fill-strong-password-button-when-value-changes.html&test=fast%2Fforms%2Finput-type-change.html&test=fast%2Fforms%2Ftextinput-not-fired-on-enter-in-input.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-reportValidity.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fforms%2Fconstraints%2Fform-validation-validate.html&limit=50000&platform=mac&flavor=wk2&style=release

Crash log attached
Comment 1 Radar WebKit Bug Importer 2020-03-02 17:12:38 PST
<rdar://problem/59975669>
Comment 2 Jason Lawrence 2020-03-02 17:13:22 PST
Created attachment 392222 [details]
form-validation-reportValidity-crash-log
Comment 3 Jason Lawrence 2020-03-02 17:13:41 PST
Created attachment 392223 [details]
input-type-attribute-crash-log
Comment 4 Jason Lawrence 2020-03-02 17:14:06 PST
Created attachment 392224 [details]
hide-auto-fill-strong-password-button-when-value-changes-crash-log
Comment 5 Jason Lawrence 2020-03-02 17:14:29 PST
Created attachment 392225 [details]
textinput-not-fired-on-enter-in-input-crash-log
Comment 6 Jason Lawrence 2020-03-02 17:14:52 PST
Created attachment 392226 [details]
form-validation-validate-crash-log
Comment 7 Ryan Haddad 2020-03-02 17:16:52 PST
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
0   com.apple.WebCore             	0x00000006581dafa4 WebCore::postUserInfoForChanges(WebCore::AXCoreObject&, WebCore::AXCoreObject&, NSMutableArray*) + 180 (AXObjectCacheMac.mm:472)
1   com.apple.WebCore             	0x00000006581dad59 WebCore::AXObjectCache::postTextReplacementPlatformNotification(WebCore::AXCoreObject*, WebCore::AXTextEditType, WTF::String const&, WebCore::AXTextEditType, WTF::String const&, WebCore::VisiblePosition const&) + 217 (AXObjectCacheMac.mm:493)
2   com.apple.WebCore             	0x00000006581dac6a WebCore::AXObjectCache::postTextStateChangePlatformNotification(WebCore::AccessibilityObject*, WebCore::AXTextEditType, WTF::String const&, WebCore::VisiblePosition const&) + 74 (AXObjectCacheMac.mm:460)
3   com.apple.WebCore             	0x0000000658bc09c3 WebCore::AXObjectCache::passwordNotificationPostTimerFired() + 179 (AXObjectCache.cpp:1068)
4   com.apple.WebCore             	0x00000006594ac0a3 WebCore::ThreadTimers::sharedTimerFiredInternal() + 163 (ThreadTimers.cpp:132)
5   com.apple.WebCore             	0x00000006594d180f WebCore::timerFired(__CFRunLoopTimer*, void*) + 31 (MainThreadSharedTimerCF.cpp:75)
6   com.apple.CoreFoundation      	0x00007fff35da4804 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20
7   com.apple.CoreFoundation      	0x00007fff35da43be __CFRunLoopDoTimer + 859
8   com.apple.CoreFoundation      	0x00007fff35da3e9e __CFRunLoopDoTimers + 317
9   com.apple.CoreFoundation      	0x00007fff35d88aed __CFRunLoopRun + 2213
10  com.apple.CoreFoundation      	0x00007fff35d87bd3 CFRunLoopRunSpecific + 499
11  com.apple.Foundation          	0x00007fff3842b1a8 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 212
12  com.apple.Foundation          	0x00007fff384ded8b -[NSRunLoop(NSRunLoop) run] + 76
13  libxpc.dylib                  	0x00007fff6d67c0e1 _xpc_objc_main.cold.4 + 49
14  libxpc.dylib                  	0x00007fff6d67c027 _xpc_objc_main + 559
15  libxpc.dylib                  	0x00007fff6d67bb5a xpc_main + 377
16  com.apple.WebKit              	0x000000010f988527 WebKit::XPCServiceMain(int, char const**) + 525
17  libdyld.dylib                 	0x00007fff6d42d7fd start + 1
Comment 8 chris fleizach 2020-03-02 17:21:12 PST
Created attachment 392229 [details]
patch
Comment 9 chris fleizach 2020-03-02 17:22:10 PST
Created attachment 392230 [details]
patch
Comment 10 Andres Gonzalez 2020-03-02 19:43:59 PST
Created attachment 392242 [details]
Patch
Comment 11 WebKit Commit Bot 2020-03-02 20:56:59 PST
The commit-queue encountered the following flaky tests while processing attachment 392242 [details]:

editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org)
The commit-queue is continuing to process your patch.
Comment 12 WebKit Commit Bot 2020-03-02 20:57:40 PST
Comment on attachment 392242 [details]
Patch

Clearing flags on attachment: 392242

Committed r257761: <https://trac.webkit.org/changeset/257761>
Comment 13 WebKit Commit Bot 2020-03-02 20:57:42 PST
All reviewed patches have been landed.  Closing bug.