REGRESSION (257739) [ Mac wk2 Release ] multiple tests crashing in WebCore::postUserInfoForChanges https://bugs.webkit.org/show_bug.cgi?id=208488 <rdar://problem/59975669>

Reviewed by Chris Fleizach.

Ensure that we have a root web area before de-referencing it.

* accessibility/mac/AXObjectCacheMac.mm:
(WebCore::AXObjectCache::postTextReplacementPlatformNotification):
(WebCore::AXObjectCache::postTextReplacementPlatformNotificationForTextControl):


Canonical link: https://commits.webkit.org/221414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257761 268f45cc-cd09-0410-ab3c-d52691b4dbfc